# Robot_Project

./: Camera2.txt  README.md  git指令.txt  進度.txt
AndroidClient/app/: build.gradle  google-services.json
AndroidClient/app/src/main/: AndroidManifest.xml
AndroidClient/app/src/main/java/com/example/dickman/myapplication/: AddContact.java  Audio.java  H264Decoder.java  H264Encoder.java  MainActivity.java  OnPhoneCallActivity.java  SelectContact.java  SlidingWindow.java  TCP_Connect.java  UDP_Request.java  Util.java  Video.java  VideoThread.java
AndroidClient/app/src/main/java/com/example/dickman/myapplication/broadcast/: ApplicationBroadcastReceiver.java  OnBootBroadcastReceiver.java  PhoneBroadCastListener.java
AndroidClient/app/src/main/java/com/example/dickman/myapplication/codec/: H264Decoder.java  H264Encoder.java
AndroidClient/app/src/main/java/com/example/dickman/myapplication/network/: SlidingWindow.java  TCP_Connect.java  UDP_Request.java
AndroidClient/app/src/main/java/com/example/dickman/myapplication/service/: FCM_IDService.java  FCM_MessageService.java  PhoneAnswerListener.java
AndroidClient/app/src/main/res/layout/: activity_add_contact.xml  activity_main.xml  activity_on_phone_call.xml  activity_select_contact.xml  fragment_select_contact.xml
AndroidClient/app/src/main/res/menu/: menu_select_contact.xml
AndroidClient/app/src/main/res/values/: strings.xml  styles.xml
AndroidClient/gradle/wrapper/: gradle-wrapper.properties
Arduino/code/: 新文字文件 (10).txt  新文字文件 (2).txt  新文字文件 (3).txt  新文字文件 (4).txt  新文字文件 (5).txt  新文字文件 (6).txt  新文字文件 (7).txt  新文字文件 (8).txt  新文字文件 (9).txt  新文字文件.txt
Arduino/inclide/: SoftwareSerial.rar
Arduino/robot/sketch_apr05a.ino/: sketch_apr05a.ino.ino
Arduino/sketch_jul13a/: sketch_jul13a.ino
Arduino/user/sketch_mar09a/: sketch_mar09a.ino
javaServer/: Server.java  password.txt
python_ffmpeg_interface/: .gitignore  CMakeLists.txt  boost_test.cpp  face_check.cpp  testFfmpeg.cpp
python_ffmpeg_interface/CMakeModules/: FindFFmpeg.cmake
python_ffmpeg_interface/dlib/: CMakeLists.txt  CMakeLists1.txt
python_ffmpeg_interface/include/: FaceDetected.h  FaceDetected_python.h  H264Decoder.h  H264Encoder.h  H264ImgProcess.h
python_ffmpeg_interface/python/: audio.py  camera.py  capPicture.py  detectedFace.py  gui.py  sliding_window.py  testInterface.py  tx2_gpio.py  tx2_pin.py  wire_socket.py
python_ffmpeg_interface/python/utils/: addPic.py  classificationPic.py  constants.py  deemo.py  server.py  tcp_client.py  util.py
python_ffmpeg_interface/src/: FaceDetected.cpp  FaceDetected_python.cpp  H264Decoder.cpp  H264Encoder.cpp  H264ImgProcess.cpp  python_interface.cpp
